--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h1>Demo website for testing purpose</h1>
+      <h1>HOME</h1>
     </div>
   </div>
 </div>
