login-register begin2

--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -27,7 +27,9 @@
         <p-footer>
             
             
-            <button pButton type="button" label="Save" icon="pi pi-check" style="margin-right: .25em" (click)="onClick()"><i class="pi pi-check">Login</i></button>
+            <button pButton type="button" label="Save" icon="pi pi-check" style="margin-right: .25em"><i class="pi pi-check">Register</i></button>
+            <br>
+        <a href="login">Login</a>
         </p-footer>
       </p-card>
 </div>
