--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,33 +1,38 @@
-<div  class="container" style="margin-left: 500px;">
+<div class="container" style="margin-left: 520px;">
     <p-card header="REGISTER" [style]="{width: '360px'}" styleClass="ui-card-shadow">
         <p-header>
             <img src="Card" src="assets/images/logo.jpg">
         </p-header>
         <div>
-          <span class="ui-float-label">
-              <input id="user" type="text" size="30" pInputText> 
-              <label for="user">Username</label>
-          </span>
-          <br>
-          <span class="ui-float-label">
-              <input pPassword type="password" size="30">
-              <label for="float-input">Password</label>
-          </span>
-          <br>
-          <span class="ui-float-label">
-              <input pPassword type="password" size="30">
-              <label for="float-input">Conferma Password</label>
-          </span>
-          <br>
-          <span class="ui-float-label">
-              <input id="user" type="text" size="30" pInputText> 
-              <label for="user">Email</label>
-          </span>
+            <span class="ui-float-label">
+                <input id="user" type="text" size="30" pInputText>
+                <label for="user">Username</label>
+            </span>
+            <br>
+            <span class="ui-float-label">
+                <input pPassword type="password" size="30">
+                <label for="float-input">Password</label>
+            </span>
+            <br>
+            <span class="ui-float-label">
+                <input pPassword type="password" size="30">
+                <label for="float-input">Conferma Password</label>
+            </span>
+            <br>
+            <span class="ui-float-label">
+                <input id="user" type="text" size="30" pInputText>
+                <label for="user">Email</label>
+            </span>
         </div>
         <p-footer>
-            
-            
-            <button pButton type="button" label="Save" icon="pi pi-check" style="margin-right: .25em" (click)="onClick()"><i class="pi pi-check">Login</i></button>
+
+
+            <button pButton type="button" label="Save" icon="pi pi-check" style="margin-right: .25em"><i
+                    class="pi pi-check">Register</i></button>
+            <br>
+            <button type="button" class="btn btn-secondar" style="background-color: transparent;"
+                (click)="onClickLogin()">Login</button>
+
         </p-footer>
-      </p-card>
+    </p-card>
 </div>
