--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -11,7 +11,7 @@
         </span>
         <br>
         <span class="ui-float-label">
-          <input pPassword type="password" size="30" formControlName="password" >
+          <input pInputText type="password" size="30" formControlName="password" >
           <label for="float-input">Password</label>
         </span></form>
 
