--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="#">Demo</a>
+  <a class="navbar-brand">Demo</a>
   <button
     class="navbar-toggler"
     type="button"
