--- a/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
+++ b/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
@@ -35,40 +35,32 @@
           </div>
           <div class="form-group col">
             <label for="country">Country</label>
-            <select
-              class="browser-default custom-select"
+            <input
+              type="text"
+              class="form-control"
               formControlName="country"
-              (change)="updateRegion($event)"
-            >
-              <option *ngFor="let cc of allCountry" [value]="cc.iso">
-                {{ cc.description }}
-              </option>
-            </select>
+              placeholder="Country"
+            />
           </div>
         </div>
         <div class="row">
           <div class="form-group col">
             <label for="city">City</label>
-            <select
-              class="browser-default custom-select"
+            <input
+              type="text"
+              class="form-control"
               formControlName="city"
-            >
-              <option *ngFor="let cc of cities" [value]="cc.description">
-                {{ cc.description }}
-              </option>
-            </select>
+              placeholder="City"
+            />
           </div>
           <div class="form-group col">
             <label for="province">Province</label>
-            <select
-              class="browser-default custom-select"
+            <input
+              type="text"
+              class="form-control"
               formControlName="province"
-              (change)="updateCity($event)"
-            >
-              <option *ngFor="let cc of regions" [value]="cc.description">{{
-                cc.description
-              }}</option>
-            </select>
+              placeholder="Province"
+            />
           </div>
         </div>
         <div class="row">
