--- a/src/app/shared/datatable/datatable.component.html
+++ b/src/app/shared/datatable/datatable.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!lista" class="row h-100 w-100 m-auto text-center">
-  <h1 class="p-5 col">Loading..</h1>
+  <h1 class="p-5 col">No dipendenti</h1>
 </div>
 <table class="table table-striped table-dark" *ngIf="lista">
   <thead class="thead-dark">
